--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -170,9 +170,95 @@ ul.main-nav li.active{
     margin-bottom: 6rem;
 }
 
-.box p{
+.box p {
     font-size: 1.6rem;
     font-weight: 300;
     line-height: 2rem;
 }
-/* START SERVICES SECTION */
+/* END SERVICES SECTION */
+
+/* START TEAM SECTION */
+.team-section {
+    background: linear-gradient(rgba(231, 241, 248, 0.9), rgba(231, 241, 248, 0.9)), url(./img/team-bg.jpg);
+    background-repeat: no-repeat;
+    background-position: center top;
+    background-size: cover;
+    background-attachment: fixed;
+}
+
+.team-section h2 {
+    color: #3c4761;
+}
+
+.team-section h2:after {
+    background: #c8d9e5;
+}
+
+.team-section .little-description {
+    color: #3c4761;
+    margin-bottom: 8rem;
+}
+
+.team-section .box {
+    text-align: center;
+}
+
+.team-section .box .team-member {
+    margin-bottom: 4rem;
+    height: 20rem;
+    width: 20rem;
+    border-radius: 50%;
+}
+
+.team-section .box h4 {
+    font-size: 2.4rem;
+    font-weight: 700;
+    color: #27283d;
+    margin-bottom: 1.5rem;
+}
+
+.team-section .box .role {
+    color: #30bae7;
+    font-size: 1.6rem;
+    font-weight: 400;
+    margin-bottom: 2.8rem;
+    display: block;
+    text-transform: capitalize;
+}
+
+.team-section .box p {
+    font-size: 1.6rem;
+    font-weight: 300;
+    color: #3c4761;
+    line-height: 2.6rem;
+}
+
+.social-icon {
+    margin-top: 2.8rem;
+}
+
+.social-icon ul li {
+    display: inline-block;
+    margin: 0 0.5rem;
+}
+
+.social-icon ul li a:link, .social-icon ul li a:visited {
+    color: #fff;
+}
+
+.social-icon ul li a:link i:before, .social-icon ul li a:visited i:before {
+    background: #bdd1df;
+    height: 2rem;
+    width: 2rem;
+    border-radius: 50%;
+    padding: 1rem;
+    display: inline-block;
+    font-size: 2rem;
+    transition: .2s ease-in;
+}
+
+.social-icon ul li a:hover i:before {
+    background: #393939;
+    transform: rotate(360deg);
+}
+/* END TEAM SECTION */
