--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -24,16 +24,13 @@ ul{
     max-width: 114rem;
     margin: 0 auto;
 }
-.row:after, .row:before {
-    content: "";
-    display: table;
-    clear: both;
-    height: 0;
-    visibility: hidden;
-}
 
 section {
     padding: 8rem 0;
+}
+
+.box {
+    padding: 1%;
 }
 
 h2{
@@ -56,10 +53,17 @@ h2:after {
     margin-top: 2.2rem;
 }
 
-h3{
+h3 {
     font-size: 2.4rem;
     font-weight: 700;
     margin-bottom: 3rem;
+    text-transform: uppercase;
+}
+
+h4 {
+    font-size: 1.8rem;
+    font-weight: 400;
+    margin-top: 2.8rem;
     text-transform: uppercase;
 }
 
@@ -81,7 +85,7 @@ h3{
     display: inline-block;
     background: #000;
     border-bottom: 0.2rem solid #fff;
-    padding: 2.8rem 8.2rem;
+    padding: 2.3rem 8.5rem;
     border-radius: 0.4rem;
 }
 /* START HEADER SECTION */
@@ -252,7 +256,7 @@ ul.main-nav li.active{
     height: 2rem;
     width: 2rem;
     border-radius: 50%;
-    padding: 1rem;
+    padding: 0.6rem;
     display: inline-block;
     font-size: 2rem;
     transition: .2s ease-in;
@@ -314,3 +318,232 @@ svg.radial-progress text {
 }
 
 /* END SKILL SECTION */
+
+/* START PORTFOLIO SECTION */
+.portfolio-section {
+    background: linear-gradient(rgba(255, 221, 153, 0.9), rgba(255, 221, 153, 0.9)), url(./img/portfolio-bg.jpg);
+    background-attachment: fixed;
+    background-position: center top;
+    background-size: cover;
+    background-repeat: no-repeat;
+    text-align: center;
+    color: #393939;
+}
+
+.portfolio-section .col:nth-child(3) {
+    margin-left: 0;
+}
+
+.portfolio-section .col:last-child {
+    margin-left: 0;
+}
+
+.portfolio-section h2::after {
+    background: #e5c37f;
+}
+
+.portfolio-filter {
+    margin: 4.2rem 0;
+}
+
+.portfolio-filter button {
+    background: #ebc985;
+    border: 0;
+    padding: 0.9rem 2rem;
+    font-size: 1.8rem;
+    font-weight: 400;
+    outline: 0;
+    text-transform: uppercase;
+    border-radius: 0.5rem;
+    margin: 0 .5rem;
+    transition: 0.5s ease-in-out;
+}
+
+.portfolio-filter button:first-child {
+    margin-left: 0;
+}
+
+.portfolio-filter button:last-child {
+    margin-right: 0;
+}
+
+.portfolio-filter button:hover {
+    cursor: pointer;
+    box-shadow: inset 0 0.3rem 0.5rem rgba(60,71,97,.5);
+}
+
+.portfolio-img {
+    width: 100%;
+    height: 30rem;
+}
+
+
+.portfolio-section .btn-load-more:link, .portfolio-section .btn-load-more:visited {
+    padding: 2.4rem 6rem;
+    background: #17c2a4;
+    color: #fff;
+    border-bottom: 0.2rem solid #14a58c;
+    margin-top: 5.8rem;
+}
+
+.portfolio-section .mixitup-control-active {
+    background: #fff;
+}
+
+/* END PORTFOLIO SECTION */
+
+/* START TESTIMONIAL SECTION */
+.testimonial-section {
+    background: linear-gradient(rgba(215, 70, 128, 0.9), rgba(215, 70, 128, 0.9)), url(./img/testimonial-bg.jpg);
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center top;
+    background-attachment: fixed;
+    color: #fff;
+    text-align: center;
+}
+.testimonial-section .col:nth-child(3) {
+    margin-left: 0;
+}
+
+.testimonial-section .col:nth-child(1), .testimonial-section .col:nth-child(2) {
+    margin-top: 4rem;
+}
+
+.testimonial-section .col:nth-child(3), .testimonial-section .col:nth-child(4) {
+    margin-top: 8rem;
+}
+
+
+.testimonial-section h2:after {
+    background: #b73c6d;
+}
+
+.testimonial-section .client-photo {
+    width: 10rem;
+    float: left;
+    margin-right: 5rem;
+}
+
+.testimonial-section .client-photo img {
+    height: 10rem;
+    border-radius: 50%;
+}
+
+.testimonial-section .client-review {
+    float: left;
+    width: 32.6rem;
+    text-align: left;
+}
+
+.testimonial-section .client-review p {
+    font-size: 2.1rem;
+    font-style: italic;
+    line-height: 1.4;
+}
+
+.testimonial-section .client-review h3 {
+    margin-top: 3rem;
+    margin-bottom: 1rem;
+}
+
+.testimonial-section .role {
+    display: block;
+    color: #ffdd99;
+    font-size: 1.8rem;
+}
+/* END TESTIMONIAL SECTION */
+
+/* START CONTACT SECTION */
+.contact-section {
+    background: linear-gradient(rgba(60, 84, 153, 0.9), rgba(60, 84, 153, 0.9)), url(./img/contact-bg.jpg);
+    background-repeat: no-repeat;
+    background-position: center top;
+    background-size: cover;
+    text-align: center;
+    color: #fff;
+}
+
+.contact-section h2:after {
+    background: #273a71;
+}
+
+.contact-section .little-description {
+    font-size: 1.8rem;
+}
+
+.contact-section form {
+    margin-top: 7rem;
+    width: 70%;
+    margin-left: 15%;
+}
+
+.contact-section input[type="text"], .contact-section input[type="email"], .contact-section textarea{
+    width: 100%;
+    background: #273a71;
+    border: 2px solid #273a71;
+    font-size: 1.8rem;
+    outline: 0;
+    padding: 1.5rem;
+    color: #fff;
+    border-radius: 0.5rem;
+    margin: 0.5rem 0;
+}
+
+.contact-section input[type="text"]::placeholder, .contact-section input[type="email"]::placeholder, .contact-section textarea::placeholder {
+    color: #fff;
+}
+
+.contact-section textarea {
+    height: 20rem;
+    margin-bottom: 6rem;
+}
+
+.contact-section .send-message-btn {
+    padding: 2.4rem 8.3rem;
+    background: #30bae7;
+    color: #fff;
+    border: 0;
+    border-bottom: 0.2rem solid #299ec5;
+}
+
+.contact-section .send-message-btn:hover {
+    cursor: pointer;
+}
+
+/* END CONTACT SECTION */
+.footer-section {
+    background: #344b8e;
+    text-align: center;
+    border-top: 1px solid rgba(255, 255, 255, 0.3);
+    padding: 2.3rem 0;
+    font-weight: 600;
+}
+
+.footer-section li {
+    display: inline-block;
+    margin: 0 2.5rem;
+}
+
+.footer-section li a {
+    font-size: 2.4rem;
+    text-decoration: none;
+    color: #fff;
+}
+
+.footer-section li:first-child {
+    margin-left: 0;
+}
+
+.footer-section li:last-child {
+    margin-right: 0;
+}
+
+.footer-section li:hover a {
+    color: #30bae7;
+}
+/* START FOOTER SECTION */
+/* END FOOTER SECTION */
+
+
+
