--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -139,6 +139,25 @@ ul.main-nav li.active{
     background: rgba(100, 58, 121, 1);
 }
 
+.sticky {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    background: rgba(135, 80, 156, 0.9);
+    box-shadow: 0 0.2rem 0 rgba(255,255,255,.6);
+    z-index: 9999;
+}
+
+.sticky .logo {
+    margin-top: 0.8rem;
+}
+
+.sticky .main-nav {
+    padding: 1rem 0;
+    margin-top: 0;
+}
+
 .hero-text-box {
     margin-top: 14.8rem;
     text-align: center;
