--- a/resources/css/responsive.css
+++ b/resources/css/responsive.css
@@ -213,10 +213,11 @@
         margin-bottom: inherit;
     }
     .portfolio-filter button {
-        padding: 6px 10px;
+        padding: 8px 4px;
     }
     .portfolio-section .btn-load-more:link, .portfolio-section .btn-load-more:visited {
         padding: 16px 40px;
+        font-size: 16px;
     }
     .testimonial-section .col:nth-child(1), .testimonial-section .col:nth-child(2) {
         margin-top: 20px;
